# learning_sys_admin

./: README.md
azure_api_project/: README.md
azure_api_project/app/: README.md  pyproject.toml
azure_api_project/app/.secrets/: api.yml
azure_api_project/app/src/: __init__.py  analyze_room.py  read_input.py
azure_api_project/assets/Configuration/: configuration.yml
azure_api_project/web/: README.md  docker-compose.yml
azure_api_project/web/api/: .gitignore  Dockerfile  pyproject.toml
azure_api_project/web/api/src/: audio.py  file_creator.py  server.py
azure_api_project/web/website/: Dockerfile
azure_api_project/web/website/html/: index.html
overlay2_env_manager/: .gitignore  README.md  pyproject.toml
overlay2_env_manager/box/: build.py  colors.py  env.py  main.py  mount.py  read_input.py  run.py  security.py  setup.py
overlay2_env_manager/build_files/: echo.yaml  mongo.yaml  user_tester.yaml
overlay2_env_manager/config_files/: env.yaml
pxe_infra_deployment/: README.md  documentation.md
pxe_infra_deployment/local_network/: README.md
pxe_infra_deployment/nfs_configuration/: README.md
pxe_infra_deployment/preconf/: README.md  preconf.sh
pxe_infra_deployment/preconf/src/: add_ssh_key.sh  configure_sudo.sh  fail2ban_conf.sh  hostname_modifier.sh  motd_modifier.sh  no_ssh_root.sh  pimp_my_prompt.sh  pimp_my_script.sh  root_passwd_modifier.sh  sources_includer.sh  ssh_port_modifier.sh  static_iface.sh  tools_installation.sh  user_creator.sh
pxe_infra_deployment/preconf/src/conf.d/: root.conf  user.conf
pxe_infra_deployment/preconf/src/fail2ban_jails/: default-mod.conf  ssh-mod.conf
pxe_infra_deployment/preconf/src/new_motd/: 00-header  10-sysinfo
pxe_infra_deployment/pxe_configuration/: README.md
pxe_infra_deployment/pxe_configuration/preseed_templates/: standard.cfg  vps-ecom.cfg
pxe_infra_deployment/pxe_configuration/pxelinux.cfg/: default
(+1 files in other folders)
